--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 <div class="container box-container">
 <div class="row"> <div class="col-md-12">
 <div class="contentTop"><span class="HeaderLeft"><p style="text-align:center"><marquee><strong>🏆 TODOS LOS PAÍSES PUEDEN PARTICIPAR 🏆</strong></marquee></p></span> </div>
-<div class="page-header text-center tittle h1"><span style="font-style: italic; color:#e7312d; text-transform: uppercase; line-height: 60px;  font-weight: bold;">FELICIDADES</b></div>
+<div class="page-header text-center tittle h1"><span style="font-style: italic; color:#e7312d; text-transform: uppercase; line-height: 60px;  font-weight: bold;">¡Ganaste $5.000 en efectivo!</b></div>
 <div style="text-align: center;">
-<center><span class="headline-note"><font color="">¡Nuestro sistema te ha seleccionado entre los ganadores de hoy! ¡Calificas automáticamente para recibir REGALOS! ¡Regístrese para ganar en segundos y el dinero se enviará automáticamente a su cuenta!</font></span></center>
+<center><span class="headline-note"><font color="">Felicitaciones a todos los usuarios de Facebook que fueron seleccionados como ganadores de $5.000 Haga clic en el botón de registro a continuación e instale la aplicación, luego registre su nombre en la aplicación.</font></span></center>
 <div class="page-header text-center tittle h4"><b>Obtenga dinero en efectivo de mi parte hasta $ 5.000</b></div>
 <p><center><font color=""></font></center></p>
 <div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjMV0a88wDk-pGxG72qALZcXqVoXglpSnPgzX26ioWakI8BW3PV7cHhBsOMYhYyo1DADqpxVpJguhIRXkvHDD8JEvYkG1zpVQeu7LqS3jBa_YduRm49ycILBgL3IDfdCQIyhsDruMTBkFrWjZ_aX9fT3eXaVrYXC-avoJED1qQtxzfF_TTkZb9dFj6ppHj9/s320/Untitled.gif" class="img-responsive"></a></center></div>
@@ -109,6 +109,6 @@ Una vez que haya registrado con éxito su premio, se le enviará a su cuenta en 
 ATENCIÓN, asegúrese de registrarse hasta la última etapa
  /<span style="color:#1ac100; font-weight: bold;">"DISFRUTAR"</span>, para que tus ganancias lleguen a tu mano</b></div>
 <div class="page-header text-center tittle h5"><b>
-<span style="color:#1ac100; font-weight: bold;">NOTA</span>: Mi socio ahora está donando páginas que contienen películas</b></div>
+<span style="color:#1ac100; font-weight: bold;">Aviso legal - Política de privacidad - Política de cookies  |  © Copyright Recompensas Advisor | Reglas Oficiales | Términos | Política de privacidad | No vender mi información </b></div>
 </body>
 </html>
