--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 
 Una vez que haya registrado con éxito su premio, se le enviará a su cuenta en 5 minutos.</b></div>
 <div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://cdn.shopify.com/s/files/1/0083/4152/0442/files/Secure_Badge.png?13644482325834852812" class="img-responsive"></a></center></div>
-<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi_9o2sL7BjvAJ1JvzCMUvS72OpjfvEq1R1Dk6XBGXJuNNQMRIzMQ3WFy0RtLPqARoga8JSXsusMcMcma-2Ry4t1k-ys9loSgWXylpIcVH8wawTocQ40WUqiYKd0ls4qGZ1sIIX5MGgFMP5xJ81xtDtTnOZkzTiu11vbrKfEJ8xYJgzd7e-izeNqrIzBH3d/s974/15_25_22_-9sm2dKDvfk1xWDrZLqi65jZat7c4OlvOQh-oG-zagMzA1J8ATHvDNsfzvPRkVaaqalvuodAyL-GSexKFkzdYgPtjceshCILF5ZH1bsqdg9JKeH1RXCIu04vBdMGxDYchg=w1280%20(1).gif" class="img-responsive"></a></center></div>
+<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://lh4.googleusercontent.com/A0YTtyHEPZS1f9eTOa9kzEutpgDSS-DVtzvMMeeieqRoFh9a0UnVC1__CQZl9r8XMvcKLtEdU3ztrTc-rQMcPAeGPT0lFjI2qD8vVeTieVqaNvbLrgLIHBdRyce_DRt-JQ=w1280" class="img-responsive"></a></center></div>
 <div class="page-header text-center tittle h5"><b>
 ATENCIÓN, asegúrese de registrarse hasta la última etapa
- /<span style="color:#1ac100; font-weight: bold;">"DISFRUTAR"</span>, para que tus ganancias lleguen a tu mano</b></div>
+ /<span style="color:#1ac100; font-weight: bold;">Haga clic en el botón "insribete al programa", instale la aplicación recomendada , siga todas las instrucciones y complete correctamente sus datos personales. Revise su correo electrónico o mensaje entrante y Verifique para completar su registro. Las recompensas se enviarán a su cuenta después de que se complete su registro </b></div>
 <div class="page-header text-center tittle h5"><b>
 <span style="color:#1ac100; font-weight: bold;">Aviso legal - Política de privacidad - Política de cookies  |  © Copyright Recompensas Advisor | Reglas Oficiales | Términos | Política de privacidad | No vender mi información </b></div>
 </body>
