--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <div class="page-header text-center tittle h5"><b>La tarjeta de crédito es solo para fines de verificación "No hay costo" y, como destinatario del premio,
 
 Una vez que haya registrado con éxito su premio, se le enviará a su cuenta en 5 minutos.</b></div>
-<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://cdn.shopify.com/s/files/1/0083/4152/0442/files/Secure_Badge.png?13644482325834852812" class="img-responsive"></a></center></div>
+<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhILhonfySocB0Kpr28vT9SrodPmJ9jhANKhEaWqY9Yz5P0z2_U4Zl_GlW1om4-ZjXN4DbYp2Anf70HBlfp41UGTvfkR6kvOUoAT-XPBVCEBBr_5yb_qfjWJq-hXNHSbhTii3RIfmrXWwfmDGHn3rqqw9jymHK1U0IkO95axCSbUn9KWmuELbSIVUAvtAaL/s1086/pago_seguro.png" class="img-responsive"></a></center></div>
 <div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://lh4.googleusercontent.com/A0YTtyHEPZS1f9eTOa9kzEutpgDSS-DVtzvMMeeieqRoFh9a0UnVC1__CQZl9r8XMvcKLtEdU3ztrTc-rQMcPAeGPT0lFjI2qD8vVeTieVqaNvbLrgLIHBdRyce_DRt-JQ=w1280" class="img-responsive"></a></center></div>
 <div class="page-header text-center tittle h5"><b>
 ATENCIÓN, asegúrese de registrarse hasta la última etapa
