--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta http-equiv="content-language" content="en"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>¡¡¡Haga clic/visite el SITIO WEB que envié para reclamar el 💸PREMIO EN EFECTIVO!!! 💸 Esto está limitado a solo unos pocos de mis fans.</title>
+<title>DESCARGA LA APLICACIÓN AQUÍ AHORA PARA GANAR DINERO!!! Esto está limitado a solo unos pocos de mis fans.</title>
  <meta name="robots" content="noindex, nofollow" />
-  <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiCeeEUicUqBaZsZ8ytMYtoIVEPbs5MZtgHQRCwmncwtg6MJn5QjpXzGhNJvhGYQxdUlX8lwBA0ErV_PDZdjKgXudWDTMvI9I2vgBuxQFHq3WQrFfjamYc0EaVTMuThB-_s1V1EAfsKQpNdcyYWOIvF6r2uEpvOzeraorc-g2ZE5EaCwFb4YPBYXgSNAplU/s1200/1aaaa.jpgg"/>
+  <meta property="og:image" content="https://i.blogs.es/34d498/aurora-store/1366_2000.jpg"/>
 
-  <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiCeeEUicUqBaZsZ8ytMYtoIVEPbs5MZtgHQRCwmncwtg6MJn5QjpXzGhNJvhGYQxdUlX8lwBA0ErV_PDZdjKgXudWDTMvI9I2vgBuxQFHq3WQrFfjamYc0EaVTMuThB-_s1V1EAfsKQpNdcyYWOIvF6r2uEpvOzeraorc-g2ZE5EaCwFb4YPBYXgSNAplU/s1200/1aaaa.jpg" />
+  <link rel="icon" type="image/png" href="https://i.blogs.es/34d498/aurora-store/1366_2000.jpg" />
 <link href="https://foryou5000.site/cloudme.fonts.googleapis.com/css?family=Asap:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"/>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
