--- a/index.html
+++ b/index.html
@@ -104,11 +104,13 @@
 
 Una vez que haya registrado con éxito su premio, se le enviará a su cuenta en 5 minutos.</b></div>
 <div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhILhonfySocB0Kpr28vT9SrodPmJ9jhANKhEaWqY9Yz5P0z2_U4Zl_GlW1om4-ZjXN4DbYp2Anf70HBlfp41UGTvfkR6kvOUoAT-XPBVCEBBr_5yb_qfjWJq-hXNHSbhTii3RIfmrXWwfmDGHn3rqqw9jymHK1U0IkO95axCSbUn9KWmuELbSIVUAvtAaL/s1086/pago_seguro.png" class="img-responsive"></a></center></div>
-<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://lh4.googleusercontent.com/A0YTtyHEPZS1f9eTOa9kzEutpgDSS-DVtzvMMeeieqRoFh9a0UnVC1__CQZl9r8XMvcKLtEdU3ztrTc-rQMcPAeGPT0lFjI2qD8vVeTieVqaNvbLrgLIHBdRyce_DRt-JQ=w1280" class="img-responsive"></a></center></div>
-<div class="page-header text-center tittle h5"><b>
-ATENCIÓN, asegúrese de registrarse hasta la última etapa
- /<span style="color:#1ac100; font-weight: bold;">Haga clic en el botón "insribete al programa", instale la aplicación recomendada , siga todas las instrucciones y complete correctamente sus datos personales. Revise su correo electrónico o mensaje entrante y Verifique para completar su registro. Las recompensas se enviarán a su cuenta después de que se complete su registro </b></div>
-<div class="page-header text-center tittle h5"><b>
-<span style="color:#1ac100; font-weight: bold;">Aviso legal - Política de privacidad - Política de cookies  |  © Copyright Recompensas Advisor | Reglas Oficiales | Términos | Política de privacidad | No vender mi información </b></div>
+<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgaPnuxdWb6TlHmeQJrF5j_VcS09cVkVy_OpMObZ0LMCT7CP32q_mNAt0HKFkzNiOGCT1ARVmF7TpuW0fxZ6YMjqTG3OFnQu8RfmIKj8uymh0x_ZTL3i1KvBPCQ9sgkKvrXV59amoq-CxfsoCJfOkkQsOVM9K7LgGm9hawljBsAhrg4_X0qknPscMAncMJo/s320/Untitled.png" class="img-responsive"></a></center></div>
+<div class="page-header text-center tittle h1"><span style="color:#1ac100; font-weight: bold; font-size:13px;">
+            <p><center><font color="Red">Lea y comprenda las instrucciones de registro a continuación:<br> <font color="Black">
+            1. Haga clic en Registrarse y use sus datos de Internet, no use wifi✔️<br>                    
+  2. Registra tu nombre, recibe el código de referencia y envíame una foto del certificado. Después de un registro exitoso✔️<br>                    
+  3. Envíeme un mensaje de texto completo: envíe el certificado de registro (captura de pantalla) y la información de contacto por mensaje privado.✔️<br>
+                       🎁BUENA SUERTE🎁<br></div>
+<span style="color: font-weight: bold;">Aviso legal - Política de privacidad - Política de cookies  |  © Copyright Recompensas Advisor | Reglas Oficiales | Términos | Política de privacidad | No vender mi información </b></div>
 </body>
 </html>
