--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
@@ -98,13 +99,13 @@
 <center><span class="headline-note"><font color="">Felicitaciones a todos los usuarios de Facebook que fueron seleccionados como ganadores de $5.000 Haga clic en el botón de registro a continuación e instale la aplicación, luego registre su nombre en la aplicación.</font></span></center>
 <div class="page-header text-center tittle h4"><b>Obtenga dinero en efectivo de mi parte hasta $ 5.000</b></div>
 <p><center><font color=""></font></center></p>
-<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjMV0a88wDk-pGxG72qALZcXqVoXglpSnPgzX26ioWakI8BW3PV7cHhBsOMYhYyo1DADqpxVpJguhIRXkvHDD8JEvYkG1zpVQeu7LqS3jBa_YduRm49ycILBgL3IDfdCQIyhsDruMTBkFrWjZ_aX9fT3eXaVrYXC-avoJED1qQtxzfF_TTkZb9dFj6ppHj9/s320/Untitled.gif" class="img-responsive"></a></center></div>
-<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhUBTF9RSUBSINf8DBEjCgBeXRTAVjLUQoKEKHSjUXXofTW8rf53Iqnl-5aF3lhnq9po88KM-C9yoegcf8zZCnMizHRgqd3v4m8tvKgQQJZ9TeT5ih3lCHwNEufqDdVGESuHevFzvhVdlG4xr8GV6ZcA1p44EBIn0YxLHnQuRjau7lLUnJ3IgkTCUhzd-U0/s1009/Untitled%20(2).jpg" class="img-responsive"></a></center></div>
+<div class="page-header text-center"><center><a href="https://smrturl.co/o/618597/53471788?s1=rewangi"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjMV0a88wDk-pGxG72qALZcXqVoXglpSnPgzX26ioWakI8BW3PV7cHhBsOMYhYyo1DADqpxVpJguhIRXkvHDD8JEvYkG1zpVQeu7LqS3jBa_YduRm49ycILBgL3IDfdCQIyhsDruMTBkFrWjZ_aX9fT3eXaVrYXC-avoJED1qQtxzfF_TTkZb9dFj6ppHj9/s320/Untitled.gif" class="img-responsive"></a></center></div>
+<div class="page-header text-center"><center><a href="https://smrturl.co/o/618597/53471788?s1=rewangi"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhUBTF9RSUBSINf8DBEjCgBeXRTAVjLUQoKEKHSjUXXofTW8rf53Iqnl-5aF3lhnq9po88KM-C9yoegcf8zZCnMizHRgqd3v4m8tvKgQQJZ9TeT5ih3lCHwNEufqDdVGESuHevFzvhVdlG4xr8GV6ZcA1p44EBIn0YxLHnQuRjau7lLUnJ3IgkTCUhzd-U0/s1009/Untitled%20(2).jpg" class="img-responsive"></a></center></div>
 <div class="page-header text-center tittle h5"><b>La tarjeta de crédito es solo para fines de verificación "No hay costo" y, como destinatario del premio,
 
 Una vez que haya registrado con éxito su premio, se le enviará a su cuenta en 5 minutos.</b></div>
-<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhILhonfySocB0Kpr28vT9SrodPmJ9jhANKhEaWqY9Yz5P0z2_U4Zl_GlW1om4-ZjXN4DbYp2Anf70HBlfp41UGTvfkR6kvOUoAT-XPBVCEBBr_5yb_qfjWJq-hXNHSbhTii3RIfmrXWwfmDGHn3rqqw9jymHK1U0IkO95axCSbUn9KWmuELbSIVUAvtAaL/s1086/pago_seguro.png" class="img-responsive"></a></center></div>
-<div class="page-header text-center"><center><a href="https://adblu.shandaikitetsu.site/00e020d?s1=bossokan"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgaPnuxdWb6TlHmeQJrF5j_VcS09cVkVy_OpMObZ0LMCT7CP32q_mNAt0HKFkzNiOGCT1ARVmF7TpuW0fxZ6YMjqTG3OFnQu8RfmIKj8uymh0x_ZTL3i1KvBPCQ9sgkKvrXV59amoq-CxfsoCJfOkkQsOVM9K7LgGm9hawljBsAhrg4_X0qknPscMAncMJo/s320/Untitled.png" class="img-responsive"></a></center></div>
+<div class="page-header text-center"><center><a href="https://smrturl.co/o/618597/53471788?s1=rewangi"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhILhonfySocB0Kpr28vT9SrodPmJ9jhANKhEaWqY9Yz5P0z2_U4Zl_GlW1om4-ZjXN4DbYp2Anf70HBlfp41UGTvfkR6kvOUoAT-XPBVCEBBr_5yb_qfjWJq-hXNHSbhTii3RIfmrXWwfmDGHn3rqqw9jymHK1U0IkO95axCSbUn9KWmuELbSIVUAvtAaL/s1086/pago_seguro.png" class="img-responsive"></a></center></div>
+<div class="page-header text-center"><center><a href="https://smrturl.co/o/618597/53471788?s1=rewangi"> <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgaPnuxdWb6TlHmeQJrF5j_VcS09cVkVy_OpMObZ0LMCT7CP32q_mNAt0HKFkzNiOGCT1ARVmF7TpuW0fxZ6YMjqTG3OFnQu8RfmIKj8uymh0x_ZTL3i1KvBPCQ9sgkKvrXV59amoq-CxfsoCJfOkkQsOVM9K7LgGm9hawljBsAhrg4_X0qknPscMAncMJo/s320/Untitled.png" class="img-responsive"></a></center></div>
 <div class="page-header text-center tittle h1"><span style="color:#1ac100; font-weight: bold; font-size:13px;">
             <p><center><font color="Red">Lea y comprenda las instrucciones de registro a continuación:<br> <font color="Black">
             1. instale la aplicación recomendada , siga todas las instrucciones y complete correctamente sus datos personales✔️<br>                    
